# headline

./: .pre-commit-config.yaml  logging.ini  pyproject.toml  tox.ini
.github/workflows/: run_tests.yaml
configs/: example_config.yaml
docs/: README.md
mock_data/: mock_service.py  test_utils_a_alphabetical.py  test_utils_a_alphabetical_rename.py  test_utils_a_alphabetical_underscores.py  test_utils_a_alphabetical_underscores_rename.py  test_utils_a_called.py  test_utils_a_called_rename.py  test_utils_a_calls.py  test_utils_a_calls_rename.py  test_utils_a_newspaper.py  test_utils_a_newspaper_rename.py  test_utils_b_alphabetical_rename.py  test_utils_b_alphabetical_underscores.py  test_utils_b_alphabetical_underscores_rename.py  test_utils_b_called.py  test_utils_b_calls_rename.py  test_utils_b_manual.py  test_utils_b_manual_rename.py  test_utils_b_newspaper.py  utils_a_alphabetical.py  utils_a_alphabetical_rename.py  utils_a_alphabetical_underscores.py  utils_a_alphabetical_underscores_rename.py  utils_a_called.py  utils_a_called_rename.py  utils_a_calls.py  utils_a_calls_rename.py  utils_a_newspaper.py  utils_a_newspaper_rename.py  utils_b_alphabetical_rename.py  utils_b_alphabetical_underscores.py  utils_b_alphabetical_underscores_rename.py  utils_b_called.py  utils_b_manual.py  utils_b_manual_rename.py  utils_b_newspaper.py  utils_b_newspaper_rename.py  utils_c_alphabetical.py  utils_c_alphabetical_rename.py  utils_c_alphabetical_underscores.py  (+5 more)
src/headline/: __main__.py  io.py  (+6 more)
tests/: conftest.py  test_io.py  test_process.py  test_transform.py  test_utils.py
(+8 files in other folders)
